change title to day2

--- a/CoreDataJournal/CoreDataJournal/Base.lproj/Main.storyboard
+++ b/CoreDataJournal/CoreDataJournal/Base.lproj/Main.storyboard
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Journal-->
+        <!--Journal - Day 2-->
         <scene sceneID="BW1-Tb-AY9">
             <objects>
                 <tableViewController id="NcD-Bv-Aid" customClass="JournalTableViewController" customModule="CoreDataJournal" customModuleProvider="target" sceneMemberID="viewController">
@@ -36,7 +36,7 @@
                             <outlet property="delegate" destination="NcD-Bv-Aid" id="xJB-UH-k53"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Journal" id="9Of-Cl-oNm">
+                    <navigationItem key="navigationItem" title="Journal - Day 2" id="9Of-Cl-oNm">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="dJY-8e-cbZ">
                             <connections>
                                 <segue destination="zD7-j7-mCx" kind="show" identifier="addNewEntrySegue" id="Sv2-4o-n4C"/>
@@ -166,6 +166,7 @@
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="IeO-ln-946" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="GC1-N0-H5p">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
